# fatigue-modeling

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  main.py  models_dataset_gbm_baseline.pkl  models_dataset_gbm_extended.pkl  models_dataset_ridge_baseline.pkl  models_dataset_ridge_extended.pkl  models_pooled_gbm_baseline.pkl  models_pooled_gbm_extended.pkl  models_pooled_ridge_baseline.pkl  models_pooled_ridge_extended.pkl  pyproject.toml
cleaned_exp_data/: combined_datasets_cleaned.csv  original_blockwise_cleaned.csv  replication_blockwise_cleaned.csv
models/: MODELS_README.md  baselines_dataset_gbm_baseline.pkl  baselines_dataset_gbm_extended.pkl  baselines_dataset_ridge_baseline.pkl  baselines_pooled_gbm_baseline.pkl  baselines_pooled_gbm_extended.pkl  baselines_pooled_ridge_baseline.pkl  lstm_dataset.npz  lstm_dataset_features.txt  lstm_pooled.npz  lstm_pooled_features.txt  results.json  test_dataset_gbm_baseline.pkl  test_dataset_gbm_extended.pkl  test_dataset_ridge_baseline.pkl  test_dataset_ridge_extended.pkl
scripts/: analyze_predictions.py  run_all_models.py  run_baselines.py  train_lstm.py
splits/: compare_dataset.json  compare_pooled.json
src/: __init__.py  lstm_model.py  preprocess.py  split.py
src/fatigue_modeling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
